@@ -1,14 +1,14 @@
 +init=./IGNF:NTFG +to +init=./IGNF:RGF93G
  3.300866856 43.4477976569 0.0000	3d18'0.915"E	43d26'52.077"N 0.000
 +init=./IGNF:LAMBE +to +init=./IGNF:LAMB93
- 600000.0000 2600545.4523  0.0000	652760.737	7033791.244 0.000
+ 600000.0000 2600545.4523  0.0000	652760.737	7033791.243 0.000
  135638.3592 2418760.4094  0.0000	187194.062	6855928.882 0.000
  998137.3947 2413822.2844  0.0000	1049052.258	6843776.562 0.000
- 600000.0000 2200000.0000  0.0000	649398.872	6633524.192 0.000
+ 600000.0000 2200000.0000  0.0000	649398.872	6633524.191 0.000
  311552.5340 1906457.4840  0.0000	358799.172	6342652.486 0.000
  960488.4138 1910172.8812  0.0000	1007068.686	6340907.237 0.000
  600000.0000 1699510.8340  0.0000	645204.279	6133556.746 0.000
-1203792.5981 626873.17210  0.0000	1238875.764	5057405.017 0.000
+1203792.5981 626873.17210  0.0000	1238875.764	5057405.016 0.000
 +init=./IGNF:LAMBE +to +init=./IGNF:GEOPORTALFXX
  600000.0000 2600545.4523  0.0000	179040.148	5610495.275 0.000
  135638.3592 2418760.4094  0.0000	-303729.363	5410118.356 0.000
@@ -19,14 +19,14 @@
  600000.0000 1699510.8340  0.0000	179047.633	4708817.007 0.000
 1203792.5981 626873.17210  0.0000	658287.395	3623739.237 0.000
 +init=./IGNF:RGF93G +to +init=./IGNF:GEOPORTALFXX
-2d20'11.4239243" 50d23'59.7718445" 0.0	179040.151	5610495.281 -0.000
--3d57'49.4051448" 48d35'59.7121716" 0.0	-303729.365	5410118.352 -0.000
-7d44'12.1439796" 48d35'59.7832558" 0.0	592842.794	5410120.550 -0.000
-2d20'11.4951975" 46d47'59.8029841" 0.0	179041.668	5209746.077 -0.000
--1d15'48.9240599" 44d05'59.8251878" 0.0	-96825.467	4909184.138 -0.000
-6d50'12.2276489" 44d06'00.0517019" 0.0	523880.022	4909191.143 -0.000
-2d20'11.7754730" 42d18'00.0824436" 0.0	179047.634	4708817.010 -0.000
-9d32'12.6680218" 41d24'00.3542556" 0.0	730783.054	4608637.873 -0.000
+2d20'11.4239243" 50d23'59.7718445" 0.0	179040.151	5610495.281 0.000
+-3d57'49.4051448" 48d35'59.7121716" 0.0	-303729.365	5410118.352 0.000
+7d44'12.1439796" 48d35'59.7832558" 0.0	592842.794	5410120.550 0.000
+2d20'11.4951975" 46d47'59.8029841" 0.0	179041.668	5209746.077 0.000
+-1d15'48.9240599" 44d05'59.8251878" 0.0	-96825.467	4909184.138 0.000
+6d50'12.2276489" 44d06'00.0517019" 0.0	523880.022	4909191.143 0.000
+2d20'11.7754730" 42d18'00.0824436" 0.0	179047.634	4708817.010 0.000
+9d32'12.6680218" 41d24'00.3542556" 0.0	730783.054	4608637.873 0.000
 +init=./IGNF:RGF93G +to +init=./IGNF:MILLER
 2d20'11.4239243" 50d23'59.7718445" 0.0	260098.730	6140682.441 0.000
 -3d57'49.4051448" 48d35'59.7121716" 0.0	-441239.699	5880610.004 0.000
@@ -37,4 +37,4 @@
 2d20'11.7754730" 42d18'00.0824436" 0.0	260109.601	5009175.714 0.000
 9d32'12.6680218" 41d24'00.3542556" 0.0	1061637.534	4889066.592 0.000
 +init=./IGNF:RGR92 +to +init=./IGNF:REUN47
-3356123.5400 1303218.3090 5247430.6050	3353421.833	1304074.314 5248935.606
+3356123.5400 1303218.3090 5247430.6050	3353421.833	1304074.314 5248935.607
